# TaskManager.exe

./: .gitignore  DESIGN.md  PROMPT.md  README.md  pyproject.toml  release.sh
.github/workflows/: test.yml
skills/: continue.md  handoff.md
taskman/: cli.py  core.py  migrate.py  server.py
taskman/skills/: SKILL.md  compact.md  continue.md  handoff.md
taskman/skills/taskman/: SKILL.md  compact.md  handoff.md  remember.md  wt.md
tests/: conftest.py  test_cli.py  test_core.py  test_e2e.py  test_install.py  test_jj.py  test_server.py  test_skills.py  test_wt.py
